Separate kicker into its own subsystem and adjust handling of some intake stuff